# NURT

./: LICENSE  README.md
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Fill.msg
src/model/: package.xml  setup.py
src/model/launch/: engine_controlled_launch.py  fusion_model_launch.py  gui_controlled_launch.py  model_launch.py
src/model/meshes/: nema17.stl  rim.stl
src/model/model/: cup_publisher.py  engine.py  nozzle_position.py
src/model/rviz/: engine_controlled.rviz  gui_controlled.rviz
src/model/urdf/: fusion_model.xacro  fusion_parts_model.xacro  materials.xacro  model.urdf  params.yaml  simple_geometry_model.urdf
src/nema17_description/: package.xml  setup.py
src/nema17_description/config/: display.rviz
src/nema17_description/launch/: display.launch.py  gazebo.launch.py
src/nema17_description/meshes/: base_link.stl  bolt_1.stl  bolt_1_1.stl  nozzle_1.stl  nozzle_1_1.stl  servo_1.stl
src/nema17_description/urdf/: materials.xacro  nema17.gazebo  nema17.trans  nema17.xacro
